--- a/lanh_autoexec.cfg
+++ b/lanh_autoexec.cfg
@@ -1,4 +1,3 @@
-bind "c" "incrementvar cl_radar_scale 0.45 0.8 0.35"
 bind "i" "noclip"
 cl_color 0
 cl_crosshair_drawoutline "0"
@@ -43,9 +42,9 @@ cl_inventory_radial_immediate_select true
 cl_inventory_radial_tap_to_cycle true
 cl_mouselook true
 cl_prefer_lefthanded true
-cl_radar_always_centered "1"
+cl_radar_always_centered "0"
 cl_radar_icon_scale_min 0.600000
-cl_radar_rotate "1"
+cl_radar_rotate "0"
 cl_radar_scale "0.45"
 cl_radar_square_with_scoreboard "1"
 cl_show_clan_in_death_notice true
@@ -53,7 +52,7 @@ cl_showfps 0
 cl_showloadout true
 cl_silencer_mode 1
 cl_sniper_auto_rezoom true
-cl_teamcounter_playercount_instead_of_avatars false
+cl_teamcounter_playercount_instead_of_avatars true
 cl_teammate_colors_show 1
 cl_use_opens_buy_menu false
 con_enable true
